--- a/pacman/index.html
+++ b/pacman/index.html
@@ -23,6 +23,7 @@
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
+			audio:src;
 			width: 10px;
 			height: 10px;
 		}
@@ -64,8 +65,9 @@
 	<div id='container'>
 		<div id='world'></div>
 		<div id='pacman' style='top:40px;left: 40px;'></div>
-		<div id='score'>1510</div>
+		<div id='score'audio src="mario-coin.mp3">1510</div>
 		<div id='scoreOrange'>150</div>
+
 	</div>	
 <script>
 	
